Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124456

[6.4.2] Margins in QuickLayouts causing a QList exception (index out of range)

    XMLWordPrintable

Details

    • Linux/Other display system, Windows
    • 6f7deef6d (dev), 0bd1fa6ce (6.7), 1bc30751d (tqtc/lts-6.5), df267df5a (6.7.1)

    Description

      Tested in a completely new QtQuick application. For some reason, setting margins to 1 crashes the application on startup with a QList exception for index out of range.

       

      ASSERT failure in QList::at: "index out of range", file C:\Users\qt\work\qt\qtbase\include\QtCore\../../src/corelib/tools/qlist.h, line 423

       

      I attached an example application, where you'll find a layout and comments stating how to have the application not crash on startup. This doesn't seem intended though, how setting anchors.margins to 1 causes this.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            smd Jan Arve
            poupado Carlos Poupado
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change